[gd_scene load_steps=17 format=2]

[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level1-Select.png" type="Texture" id=1]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level3-Normal.png" type="Texture" id=2]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/ReturnButtonNormal.png" type="Texture" id=3]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/ReturnButtonClick.png" type="Texture" id=4]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/ReturnButtonHover.png" type="Texture" id=5]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level2-Normal.png" type="Texture" id=6]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level3-Hover.png" type="Texture" id=7]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level1-Normal.png" type="Texture" id=8]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/City-Level3-Disabled.png" type="Texture" id=9]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level3-Select.png" type="Texture" id=10]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level2-Select.png" type="Texture" id=11]
[ext_resource path="res://DigitalTechMenu/1x/MneLevelSelect.png" type="Texture" id=12]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level1-Hover.png" type="Texture" id=13]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/City-Level2-Disabled.png" type="Texture" id=14]
[ext_resource path="res://DigitalTechMenu/Buttons/1x/Mine-Level2-Hover.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Mine-LevelSelect.gd" type="Script" id=16]

[node name="Mine-LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 615.32, 421.837 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.74, 300 )
texture = ExtResource( 12 )

[node name="Level 1" type="TextureButton" parent="."]
margin_left = 122.274
margin_top = 104.065
margin_right = 338.274
margin_bottom = 310.065
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 2" type="TextureButton" parent="."]
margin_left = 403.115
margin_top = 104.065
margin_right = 619.115
margin_bottom = 310.065
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 3" type="TextureButton" parent="."]
margin_left = 682.274
margin_top = 104.065
margin_right = 898.274
margin_bottom = 310.065
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="."]
margin_left = 26.5729
margin_top = 432.162
margin_right = 166.573
margin_bottom = 562.162
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
